# nexum-keycard

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: audit.yml  ci.yml  cla.yml
nexum-keycard/: Cargo.toml
nexum-keycard-cli/: Cargo.toml  README.md
nexum-keycard-cli/src/commands/: applet.rs  card_operations.rs  credentials.rs  data_management.rs  key_operations.rs
nexum-keycard-cli/src/utils/: mod.rs  reader.rs  session.rs
nexum-keycard-signer/: Cargo.toml
nexum-keycard-signer/examples/: send_transaction.rs
nexum-keycard-signer/src/: signer.rs
nexum-keycard/src/: application.rs  crypto.rs  error.rs  lib.rs  secrets.rs  secure_channel.rs  session.rs  validation.rs
nexum-keycard/src/commands/: export_key.rs  get_data.rs  get_status.rs  ident.rs  open_secure_channel.rs  select.rs  sign.rs  store_data.rs
nexum-keycard/src/types/: application_info.rs  exported_key.rs  keypair.rs
src/: application.rs  constants.rs  crypto.rs  error.rs  lib.rs  secrets.rs  secure_channel.rs  session.rs
src/commands/: derive_key.rs  export_key.rs  factory_reset.rs  generate_key.rs  generate_mnemonic.rs  get_data.rs  get_status.rs  ident.rs  init.rs  load_key.rs  mod.rs  mutually_authenticate.rs  open_secure_channel.rs  pair.rs  pin.rs  remove_key.rs  select.rs  set_pinless_path.rs  sign.rs  store_data.rs  unpair.rs
src/types/: application_info.rs  application_status.rs  capabilities.rs  mod.rs  pairing_info.rs  signature.rs  version.rs
