[package]
name = "nexum-keycard-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["smart-card", "cryptography", "iso7816", "apdu", "keycard"]
description = "Ethereum transaction signer implementation for Keycards"

[dependencies]
## blockchain
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-signer.workspace = true
alloy-consensus.workspace = true

## crypto
k256.workspace = true
rand.workspace = true

## misc
eyre = "0.6"
async-trait.workspace = true
parking_lot.workspace = true
coins-bip32.workspace = true

## keycard
nexum-keycard.workspace = true
nexum-apdu-core.workspace = true

## async
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
# The example builds a full provider stack; we depend on the
# individual alloy-* crates rather than the `alloy` meta-crate to
# avoid pulling features we don't need.
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { version = "2", default-features = false, features = ["reqwest"] }
alloy-rpc-types-eth = { version = "2", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread"] }
